Changed back some code

--- a/src/style.css
+++ b/src/style.css
@@ -103,16 +103,18 @@ a {
 
 .weather-forecast {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 30px;
+  /* margin-left: -30px; */
 }
 
 .weather-forecast-date {
-  text-align: center;
   font-size: 16px;
-  line-height: 20px;
+  line-height: 20px; /*?24?*/
   color: rgba(39, 33, 66, 0.4);
   margin-bottom: 10px;
+  text-align: center;
+  /*padding-top: -20px; */
 }
 
 .weather-forecast-icon {
@@ -120,16 +122,19 @@ a {
   height: 88px;
   display: block;
   margin: 0 auto;
+  /* padding-top: 30px; */
 }
 
 .weather-forecast-temperatures {
   display: flex;
   justify-content: center;
   margin-top: 10px;
+  /* padding-top: 30px; */
   text-align: center;
   color: #f65282;
 }
 
 .weather-forecast-temperature {
-  padding: 0 10px;
+  padding: 0 10px; /*80 10*/
+  /* margin-left: -90px; */
 }
