--- a/src/style.css
+++ b/src/style.css
@@ -38,7 +38,7 @@ a {
   background-color: #fff;
   display: block;
   margin: 45px auto;
-  max-width: 600px;
+  max-width: 700px;
   padding: 30px;
   border-radius: 16px;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
@@ -117,13 +117,13 @@ a {
   /*padding-top: -20px; */
 }
 
-.weather-forecast-icon {
+/* .weather-forecast-icon {
   width: 88px;
   height: 88px;
   display: block;
-  margin: 0 auto;
-  /* padding-top: 30px; */
-}
+  margin: 0 auto; */
+/* padding-top: 30px; */
+/* } */
 
 .weather-forecast-temperatures {
   display: flex;
